# argparse

./: .core.yml  .gitignore  .valgrind-suppressions  CMakeLists.txt  Dockerfile  README.md  TODO
Testing/: TAG
cmake/: ArgparseConfig.cmake  argparseConfig.cmake  pack.cmake
examples/: CMakeLists.txt  custom-flag.c
include/argparse/: argparse.h  argument.h  arguments.h  command.h  context.h  helper-functions.h  memory.h  option.h  optional.h  optionals.h  options.h  set.h  subcommands.h  vector.h
src/: argument.c  arguments.c  command.c  context.c  helper-functions.c  memory.c  option.c  optional.c  optionals.c  options.c  set.c  subcommands.c  vector.c
test/: CMakeLists.txt  basic-help  main.c  options.c  set.c  subcommands.c
